added necessary profile for jenkins