@@ -74,8 +74,8 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:git://github.com/hazelcast/hazelcast-hibernate.git</connection>
-        <developerConnection>scm:git:git@github.com:hazelcast/hazelcast-hibernate.git</developerConnection>
+        <connection>scm:git:git://github.com/hazelcast/hazelcast-wm.git</connection>
+        <developerConnection>scm:git:git@github.com:hazelcast/hazelcast-wm.git</developerConnection>
         <url>https://github.com/hazelcast/hazelcast/</url>
     </scm>
     <developers>
@@ -90,6 +90,19 @@
             <email>fuad@hazelcast.com</email>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <repository>
+            <id>release-repository</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshot-repository</id>
+            <name>Maven2 Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
     
     <build>
         <plugins>
@@ -247,6 +260,29 @@
                     <stopPort>9966</stopPort>
                     <stopKey>stop</stopKey>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration combine.self="override">
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <runOrder>failedfirst</runOrder>
+                    <argLine>
+                        -Xms128m -Xmx1G -XX:MaxPermSize=128M
+                        -Dhazelcast.phone.home.enabled=false
+                        -Dhazelcast.mancenter.enabled=false
+                        -Dhazelcast.logging.type=none
+                        -Dhazelcast.test.use.network=false
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${maven.sonar.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
@@ -433,7 +469,7 @@
             <properties>
                 <argLine>
                     -Xms128m -Xmx1G -XX:MaxPermSize=128M
-                    -Dhazelcast.phone.home.enabled=false
+                    -Dhazelcast.version.check.enabled=false
                     -Dhazelcast.mancenter.enabled=false
                     -Dhazelcast.logging.type=none
                     -Dhazelcast.test.use.network=false
@@ -445,24 +481,6 @@
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${maven.jacoco.plugin.version}</version>
-                        <configuration>
-                            <excludes>
-                                <exclude>**DummyProperty**</exclude>
-                                <exclude>**DummyEntity**</exclude>
-                                <exclude>**test-hibernate**</exclude>
-                                <exclude>**HibernateStatisticsTestSupport**</exclude>
-                                <exclude>**HibernateTestSupport**</exclude>
-                                <exclude>**RegionFactoryDefaultTest**</exclude>
-                                <exclude>**/client/**Request.*</exclude>
-                            </excludes>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>prepare-agent</goal>
-                                </goals>
-                            </execution>
-                        </executions>
                     </plugin>
 
                     <plugin>
@@ -472,13 +490,6 @@
                         <configuration combine.self="override">
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <testFailureIgnore>true</testFailureIgnore>
-                            <includes>
-                                <include>**/*.java</include>
-                            </includes>
-                            <groups>com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest</groups>
-                            <excludedGroups>
-                                com.hazelcast.test.annotation.NightlyTest
-                            </excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -542,6 +553,73 @@
                             <serverId>release-repository</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>release-snapshot</id>
+            <properties>
+                <javadoc>true</javadoc>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${maven.javadoc.plugin.version}</version>
+                        <configuration>
+                            <javaApiLinks>
+                                <property>
+                                    <name>api_1.6</name>
+                                    <value>http://download.oracle.com/javase/1.6.0/docs/api/</value>
+                                </property>
+                                <property>
+                                    <name>api_1.7</name>
+                                    <value>http://download.oracle.com/javase/1.7.0/docs/api/</value>
+                                </property>
+                            </javaApiLinks>
+                            <excludePackageNames>
+                                *.impl:*.internal:*.operations:*.proxy:*.util:com.hazelcast.aws.security:
+                                *.handlermigration:*.client.connection.nio:*.client.console:*.buildutils:
+                                *.client.protocol.generator:*.cluster.client:*.concurrent:*.collection:
+                                *.nio.ascii:*.nio.ssl:*.nio.tcp:*.partition.client:*.transaction.client:
+                                *.core.server:com.hazelcast.instance:com.hazelcast.PlaceHolder
+                            </excludePackageNames>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>master</id>
+            <properties>
+                <hazelcast.version>3.7-SNAPSHOT</hazelcast.version>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <parallel>none</parallel>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                                -Dhazelcast.phone.home.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
